--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#Portfolio">Services</a></li>
                     <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
     </header>
     <article>
-        <section class = "latching">
+        <section class = "latching" id="home">
             <div class="info">
                 <h1>Hello There</h1>
                 <p>We are leon - Super Creative & Minimal Agence Web Templete</p>
@@ -58,7 +59,7 @@
                 </div>
             </div>
         </section>
-        <section class="services">
+        <section class="services" id = "services">
             <div class="container">
                 <h1 class = "special-heading">Services</h1>
                 <p>Don't be busy, be productive</p>
@@ -117,7 +118,7 @@
             </div>
         </section>
 
-        <section class="portfolio">
+        <section class="portfolio" id = "Portfolio">
             <div class="container">
                 <h1 class="special-heading">Portfolio</h1>
                 <p>if you do it right, it will last forever</p>
@@ -153,7 +154,7 @@
             </div>
         </section>
 
-        <section class = "about">
+        <section class = "about" id = "about">
             <div class="container">
                 <h1 class="special-heading">About</h1>
                 <p>Less Is More Work</p>
@@ -178,7 +179,7 @@
             </div>
         </section>
 
-        <section class="contact">
+        <section class="contact" id = "contact">
             <div class="container">
                 <h1 class="special-heading">Contact</h1>
                 <p>We Are born To Create</p>
