--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#Portfolio">Services</a></li>
+                    <li><a href="#Portfolio">Portfolio</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
