--- a/index.html
+++ b/index.html
@@ -1,204 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"rel="stylesheet">
-    <link rel="stylesheet" href="file/css/index.css">
-    <link rel="stylesheet" href="file/css/normalize.css">
-    <link rel="stylesheet" href="file/css/all.min.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="file/css/index.css" />
+    <link rel="stylesheet" href="file/css/normalize.css" />
+    <link rel="stylesheet" href="file/css/all.min.css" />
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <div class="logo">
-                <img src="file/img/logo.png" alt="">
-            </div>
-            <div class="links">
-                <span class="icon">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </span>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#Portfolio">Portfolio</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
+      <div class="container">
+        <div class="logo">
+          <img src="file/img/logo.png" alt="" />
         </div>
+        <div class="links">
+          <span class="icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#Portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
     <article>
-        <section class = "latching" id="home">
-            <div class="info">
-                <h1>Hello There</h1>
-                <p>We are leon - Super Creative & Minimal Agence Web Templete</p>
-            </div>
-        </section>
-        <section class="feature">
-            <div class="container">
-                <div class="feat">
-                    <i class="fa-solid fa-wand-magic-sparkles"></i>
-                    <h3>Your Product Is Worldwide</h3>
-                    <p>Lerem ipsum dolor sit amet consectetur adipisicing elit. Unde nobis sit voliptatem</p>
+      <section class="latching" id="home">
+        <div class="info">
+          <h1>Hello There</h1>
+          <p>We are leon - Super Creative & Minimal Agence Web Templete</p>
+        </div>
+      </section>
+      <section class="feature">
+        <div class="container">
+          <div class="feat">
+            <i class="fa-solid fa-wand-magic-sparkles"></i>
+            <h3>Your Product Is Worldwide</h3>
+            <p>
+              Lerem ipsum dolor sit amet consectetur adipisicing elit. Unde
+              nobis sit voliptatem
+            </p>
+          </div>
+          <div class="feat">
+            <i class="fa-regular fa-gem"></i>
+            <h3>Your Product Is Worldwide</h3>
+            <p>
+              Lerem ipsum dolor sit amet consectetur adipisicing elit. Unde
+              nobis sit voliptatem
+            </p>
+          </div>
+          <div class="feat">
+            <i class="fa-solid fa-earth-americas"></i>
+            <h3>Your Product Is Worldwide</h3>
+            <p>
+              Lerem ipsum dolor sit amet consectetur adipisicing elit. Unde
+              nobis sit voliptatem
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="services" id="services">
+        <div class="container">
+          <h1 class="special-heading">Services</h1>
+          <p>Don't be busy, be productive</p>
+          <div class="service-content">
+            <div class="col">
+              <div class="serv">
+                <i class="fa-solid fa-palette"></i>
+                <div class="text-content">
+                  <h3>Graphic Design</h3>
+                  <p>
+                    Graphic design is the process of visual communication and
+                    problem-solving using one or more of typography, photography
+                    and illustration.
+                  </p>
                 </div>
-                <div class="feat">
-                    <i class="fa-regular fa-gem"></i>
-                    <h3>Your Product Is Worldwide</h3>
-                    <p>Lerem ipsum dolor sit amet consectetur adipisicing elit. Unde nobis sit voliptatem</p>
-                </div>
-                <div class="feat">
-                    <i class="fa-solid fa-earth-americas"></i>
-                    <h3>Your Product Is Worldwide</h3>
-                    <p>Lerem ipsum dolor sit amet consectetur adipisicing elit. Unde nobis sit voliptatem</p>
-                </div>
-            </div>
-        </section>
-        <section class="services" id = "services">
-            <div class="container">
-                <h1 class = "special-heading">Services</h1>
-                <p>Don't be busy, be productive</p>
-                <div class="service-content">
-                    <div class="col">
-                        <div class="serv">
-                            <i class="fa-solid fa-palette"></i>
-                            <div class="text-content">
-                                <h3>Graphic Design</h3>
-                                <p>
-                                    Graphic design is the process of visual communication
-                                    and problem-solving using one or more of typography, photography
-                                    and illustration.
-                                </p>
-                            </div>
-                        </div>
+              </div>
 
-                        <div class="serv">
-                            <i class="fa-brands fa-sketch"></i>
-                            <div class="text-content">
-                                <h3>UI & UX</h3>
-                                <p>
-                                    Process of enhancing user satisfaction with a product by improving the usability, accessibility, and pleasure provided
-                                    in the interaction.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="serv">
-                            <i class="fa-solid fa-vector-square"></i>
-                            <div class="text-content">
-                                <h3>Web Design</h3>
-                                <p>
-                                    Web design encompasses many different skills and disciplines in the production and maintenance of websites.
-                                </p>
-                            </div>
-                        </div>
-                        
-                        <div class="serv">
-                            <i class="fa-solid fa-pen-ruler"></i>
-                            <div class="text-content">
-                                <h3>Web Development</h3>
-                                <p>
-                                    Web development is a broad term for the work involved in developing a web site for the Internet or an intranet.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="image image-column">
-                            <img src="file/img/services.jpg" alt="">
-                        </div>
-                    </div>
+              <div class="serv">
+                <i class="fa-brands fa-sketch"></i>
+                <div class="text-content">
+                  <h3>UI & UX</h3>
+                  <p>
+                    Process of enhancing user satisfaction with a product by
+                    improving the usability, accessibility, and pleasure
+                    provided in the interaction.
+                  </p>
                 </div>
+              </div>
             </div>
-        </section>
+            <div class="col">
+              <div class="serv">
+                <i class="fa-solid fa-vector-square"></i>
+                <div class="text-content">
+                  <h3>Web Design</h3>
+                  <p>
+                    Web design encompasses many different skills and disciplines
+                    in the production and maintenance of websites.
+                  </p>
+                </div>
+              </div>
 
-        <section class="portfolio" id = "Portfolio">
-            <div class="container">
-                <h1 class="special-heading">Portfolio</h1>
-                <p>if you do it right, it will last forever</p>
-                <div class="portfolio-content">
-                    <div class="card">
-                        <img src="file/img/portfolio-1.jpg" alt="">
-                        <div class="text-info">
-                            <h3>Project Here</h3>
-                            <p>My creative ability is very difficult to measure because it can
-                                manifest in so many surprising and.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="file/img/portfolio-2.jpg" alt="">
-                        <div class="text-info">
-                            <h3>Project Here</h3>
-                            <p>My creative ability is very difficult to measure because it can
-                                manifest in so many surprising and.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="file/img/portfolio-3.jpg" alt="">
-                        <div class="text-info">
-                            <h3>Project Here</h3>
-                            <p>My creative ability is very difficult to measure because it can
-                                manifest in so many surprising and.
-                            </p>
-                        </div>
-                    </div>
+              <div class="serv">
+                <i class="fa-solid fa-pen-ruler"></i>
+                <div class="text-content">
+                  <h3>Web Development</h3>
+                  <p>
+                    Web development is a broad term for the work involved in
+                    developing a web site for the Internet or an intranet.
+                  </p>
                 </div>
+              </div>
             </div>
-        </section>
+            <div class="col">
+              <div class="image image-column">
+                <img src="file/img/services.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-        <section class = "about" id = "about">
-            <div class="container">
-                <h1 class="special-heading">About</h1>
-                <p>Less Is More Work</p>
-                <div class="about-content">
-                    <div class="image">
-                        <img src="file/img/about.jpg" alt="">
-                    </div>
-                    <div class="about-text">
-                        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Error ut, fugiat repellat exercitationem, voluptatum possimus
-                            consectetur aut assumenda magni ab eligendi! Amet eligendi veniam placeat 
-                            perspiciatis id officiis tenetur distinctio.
-                        </h4>
-                        <hr>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                            Vel architecto accusantium tempora! Neque tempora accusantium
-                            ex eos incidunt cupiditate architecto beatae fugiat sit rem? 
-                            Quibusdam quasi explicabo sunt doloremque animi!
-                        </p>
-                    </div>
-                </div>
+      <section class="portfolio" id="Portfolio">
+        <div class="container">
+          <h1 class="special-heading">Portfolio</h1>
+          <p>if you do it right, it will last forever</p>
+          <div class="portfolio-content">
+            <div class="card">
+              <img src="file/img/portfolio-1.jpg" alt="" />
+              <div class="text-info">
+                <h3>Project Here</h3>
+                <p>
+                  My creative ability is very difficult to measure because it
+                  can manifest in so many surprising and.
+                </p>
+              </div>
             </div>
-        </section>
+            <div class="card">
+              <img src="file/img/portfolio-2.jpg" alt="" />
+              <div class="text-info">
+                <h3>Project Here</h3>
+                <p>
+                  My creative ability is very difficult to measure because it
+                  can manifest in so many surprising and.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="file/img/portfolio-3.jpg" alt="" />
+              <div class="text-info">
+                <h3>Project Here</h3>
+                <p>
+                  My creative ability is very difficult to measure because it
+                  can manifest in so many surprising and.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-        <section class="contact" id = "contact">
-            <div class="container">
-                <h1 class="special-heading">Contact</h1>
-                <p>We Are born To Create</p>
-                <div class="contact-text">
-                    <h1>Feel Free To Drop US A line At:</h1>
-                    <a href="#">leonagency@mail.com</a>
-                    <div class="labels">
-                        Find Us In Social Network
-                        <i class="fa-brands fa-facebook"></i>
-                        <i class="fa-brands fa-youtube"></i>
-                        <i class="fa-brands fa-square-twitter"></i>
-                    </div>
-                </div>
+      <section class="about" id="about">
+        <div class="container">
+          <h1 class="special-heading">About</h1>
+          <p>Less Is More Work</p>
+          <div class="about-content">
+            <div class="image">
+              <img src="file/img/about.jpg" alt="" />
             </div>
-        </section>
+            <div class="about-text">
+              <h4>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error
+                ut, fugiat repellat exercitationem, voluptatum possimus
+                consectetur aut assumenda magni ab eligendi! Amet eligendi
+                veniam placeat perspiciatis id officiis tenetur distinctio.
+              </h4>
+              <hr />
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel
+                architecto accusantium tempora! Neque tempora accusantium ex eos
+                incidunt cupiditate architecto beatae fugiat sit rem? Quibusdam
+                quasi explicabo sunt doloremque animi!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="contact" id="contact">
+        <div class="container">
+          <h1 class="special-heading">Contact</h1>
+          <p>We Are born To Create</p>
+          <div class="contact-text">
+            <h1>Feel Free To Drop US A line At:</h1>
+            <a href="#">leonagency@mail.com</a>
+            <div class="labels">
+              Find Us In Social Network
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-youtube"></i>
+              <i class="fa-brands fa-square-twitter"></i>
+            </div>
+          </div>
+        </div>
+      </section>
     </article>
     <footer>
-        <p>© 2024 <span style="color: var(--main-color);">Leon</span>All Right Reserved</p>
+      <p>
+        © 2024 <span style="color: var(--main-color)">Leon</span>All Right
+        Reserved
+      </p>
     </footer>
-</body>
+  </body>
 </html>
-<script src = "file/css/index.js"></script>
+<script src="file/css/index.js"></script>
